--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,11 @@
 {
     "require-dev": {
+
         "filp/whoops": "^2.14",
         "laravel/ui": "^2.5"
+    },
+
+    "require": {
+        "symfony/mailer": "^5.4"
     }
 }
